tests/baselines/reference/asyncAwaitIsolatedModules_es5.errors.txt
tests/cases/conformance/async/es5/asyncAwaitIsolatedModules_es5.ts(1,27): error TS2307: Cannot find module 'missing' or its corresponding type declarations.


==== tests/cases/conformance/async/es5/asyncAwaitIsolatedModules_es5.ts (1 errors) ====
    import { MyPromise } from "missing";
                              ~~~~~~~~~
!!! error TS2307: Cannot find module 'missing' or its corresponding type declarations.
    
    declare var p: Promise<number>;
    declare var mp: MyPromise<number>;
    
    async function f0() { }
    async function f1(): Promise<void> { }
    async function f3(): MyPromise<void> { }
    
    let f4 = async function() { }
    let f5 = async function(): Promise<void> { }
    let f6 = async function(): MyPromise<void> { }
    
    let f7 = async () => { };
    let f8 = async (): Promise<void> => { };
    let f9 = async (): MyPromise<void> => { };
    let f10 = async () => p;
    let f11 = async () => mp;
    let f12 = async (): Promise<number> => mp;
    let f13 = async (): MyPromise<number> => p;
    
    let o = {
    	async m1() { },
    	async m2(): Promise<void> { },
    	async m3(): MyPromise<void> { }
    };
    
    class C {
    	async m1() { }
    	async m2(): Promise<void> { }
    	async m3(): MyPromise<void> { }
    	static async m4() { }
    	static async m5(): Promise<void> { }
    	static async m6(): MyPromise<void> { }
    }
    
    module M {
    	export async function f1() { }
    }